--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             autocomplete="off"
           >
         </label>
-        <label for="nameUser" class="fieldElem">
+        <label class="fieldElem">
           Name:
           <input
             type="text"
@@ -49,39 +49,36 @@
             id="age"
           >
         </label>
-        <label class="fieldElem" for="dateBirth">
+        <label class="fieldElem">
           Full date of birth:
           <input
             type="date"
-            name="dateBirth"
             id="dateBirth"
           >
         </label>
-        <label class="fieldElem lastElem" for="termsAgreed">
+        <label class="fieldElem lastElem">
           I accept the term of the agreement
           <input
             type="checkbox"
-            name="termsAgreed"
-            id="termsAgreed"required
+            id="termsAgreed"
+            required
           >
         </label>
       </fieldset>
       <fieldset class="fieldset">
         <legend>Registration</legend>
-        <label class="fieldElem" for="email">E-mail:
+        <label class="fieldElem">E-mail:
           <input
             type="email"
             required
             placeholder="email@example.com"
-            name="email"
             id="email"
           >
         </label>
-        <label class="fieldElem  lastElem" for="password">
+        <label class="fieldElem  lastElem">
           Password:
           <input
             type="password"
-            name="password"
             id="password"
             minlength="5"
             maxlength="16"
@@ -96,7 +93,7 @@
           <input type="radio" name="loveCats">
           No
         </label>
-        <label class="fieldElem" for="color">
+        <label class="fieldElem">
           What is your favorite color?
           <input
             type="color"
@@ -104,15 +101,14 @@
             id="color"
           >
         </label>
-        <label class="fieldElem" for="bedTime">
+        <label class="fieldElem">
           What time do you go to bed?
           <input
             type="time"
-            name="bedTime"
             id="bedTime"
           >
         </label>
-        <label class="fieldElem" for="favCars">
+        <label class="fieldElem">
           What are your favorite brand of cars?
           <select multiple id="favCars">
             <option>BMW</option>
@@ -131,12 +127,11 @@
       </fieldset>
       <fieldset class="fieldset">
         <legend>Additional info:</legend>
-        <label class="fieldElem" for="commentAddInfo">
+        <label class="fieldElem">
           Comments:
           <textarea
             cols="20"
             rows="2"
-            name="commentAddInfo"
             id="commentAddInfo">
           </textarea>
         </label>
